--- a/02-practicing-project/src/app/app.component.html
+++ b/02-practicing-project/src/app/app.component.html
@@ -1,2 +1,5 @@
 <app-header />
+<!-- <app-user-input (calculate)="onCalculateInvestmentResults($event)"/> - provides data for parent element -->
+<!-- <app-investment-results [investmentResults]="resultsData"/>  - parent element passes data to child element ------------------------ brackets used ONLY if signals -->
 <app-user-input />
+<app-investment-results />
