--- a/05-Api/src/app/places/user-places/user-places.component.html
+++ b/05-Api/src/app/places/user-places/user-places.component.html
@@ -1,3 +1,15 @@
 <app-places-container title="Your Favorite Places">
-  <p>Todo...</p>
+  @if(isFetching() && !error()){
+    <p class="fallback-text">Fetching available places...</p>
+  }
+
+  @if(error()){
+    <p class="fallback-text">{{error()}}</p>
+  }
+
+  @if (userPlaces()) {
+  <app-places [places]="userPlaces()!" (selectPlace)="onDeletePlace($event)"/>
+  } @else if (userPlaces().length === 0) {
+  <p class="fallback-text">Unfortunately, no places could be found.</p>
+  }
 </app-places-container>
